<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.ajarajeswarirsapplication.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSIGNUP"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleindigo_A200">
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtCreateyournew"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_58pxv"
            android:layout_width="match_parent"
            android:text="@{signUpVM.signUpModel.txtCreateyournew}"
            style="@style/txtKanitsemibold42" tools:text="@string/msg_create_your_new"/>
        <TextView android:ellipsize="end" android:id="@+id/txtUserName"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtUserName}"
            style="@style/txtKanitregular20" tools:text="@string/lbl_username"/>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/lbl_username2"
            android:id="@+id/textInputLayValue"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">
            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end" android:id="@+id/etValue"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etValueValue}"
                android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtEmail}"
            style="@style/txtKanitregular20" tools:text="@string/lbl_email"/>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/lbl_enter_email"
            android:id="@+id/textInputLayBox"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">
            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end" android:id="@+id/etBox"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etBoxValue}"
                android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtLanguage}"
            style="@style/txtKanitregular20" tools:text="@string/lbl_password2"/>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/lbl_enter_password2"
            android:id="@+id/textInputLayBoxOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">
            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end" android:id="@+id/etBoxOne"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etBoxOneValue}"
                android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfirmPasswor"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtConfirmPasswor}"
            style="@style/txtKanitregular20" tools:text="@string/msg_confirm_passwor"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_101_radius_22"
            android:id="@+id/viewBoxTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_44pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_15pxv" android:layout_width="@dimen/_325pxh"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_43pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="@dimen/_150pxh"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_6pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
    </LinearLayout>
</layout>
