<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInVM" type="com.ajarajeswarirsapplication.app.modules.signin.data.viewmodel.SignInVM"/>
    </data>
    <FrameLayout android:id="@+id/frameSIGNIN"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleindigo_A200">
        <LinearLayout android:id="@+id/linearColumnvector"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_43pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameStackvector"
                android:layout_gravity="start"
                android:layout_height="@dimen/_213pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh" android:layout_width="@dimen/_226pxh">
                <ImageView android:id="@+id/imageVector"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_213pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                <FrameLayout android:id="@+id/frameStacksignin"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_146pxv"
                    android:layout_marginBottom="@dimen/_33pxv"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_33pxv" android:layout_width="@dimen/_147pxh">
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtSignIn"
                        android:layout_gravity="bottom|end"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_32pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_32pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{signInVM.signInModel.txtSignIn}"
                        style="@style/txtKanitsemibold40" tools:text="@string/lbl_sign_in"/>
                    <ImageView android:id="@+id/imageUndrawmypassw"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_146pxh"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_width="@dimen/_145pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_undrawteamup"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_undrawteamup"/>
                </FrameLayout>
            </FrameLayout>
            <FrameLayout android:id="@+id/frameStackusername"
                android:layout_gravity="start"
                android:layout_height="@dimen/_126pxv"
                android:layout_marginTop="@dimen/_33pxv" android:layout_width="@dimen/_325pxh">
                <LinearLayout android:id="@+id/linearColumnusername"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_width="wrap_content" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtUserName"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{signInVM.signInModel.txtUserName}"
                        style="@style/txtKanitregular20" tools:text="@string/lbl_username"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPassword"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_marginTop="@dimen/_66pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{signInVM.signInModel.txtPassword}"
                        style="@style/txtKanitregular20" tools:text="@string/lbl_password"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/lbl_enter_username"
                    android:id="@+id/textInputLayBox"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_40pxv"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:ellipsize="end" android:id="@+id/etBox"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@={signInVM.signInModel.etBoxValue}"
                        android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_enter_password"
                android:id="@+id/textInputLayBoxOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end" android:id="@+id/etBoxOne"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={signInVM.signInModel.etBoxOneValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogin"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_43pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_67pxv"
                android:layout_width="@dimen/_150pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_login2"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_login2"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowconfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:id="@+id/txtConfirmation"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.76"
                    android:layout_width="0dp"
                    android:text="@{signInVM.signInModel.txtConfirmation}"
                    style="@style/txtKanitregular12" tools:text="@string/msg_do_not_have_an"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignUp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_weight="0.24"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{signInVM.signInModel.txtSignUp}"
                    style="@style/txtKanitregular14"
                    textUnderline="true" tools:text="@string/lbl_sign_up2"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
